# 455-assignment2

./: .gitignore  1  a2_public_easy.gtp.html  a2_public_easy.gtp.out.html  a2_public_medium.gtp  a2_public_medium.gtp.html  a2_public_medium.gtp.out.html  aplha_beta.py  board.py  exp.py  gtp_connection.py  index.html  pyproject.toml  run.sh  tmp.py
