[tool.poetry]
name = "assignment2"
version = "0.1.0"
description = ""
authors = ["intmax <563748846@qq.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">3.10,<3.13"
numpy = "^1.26.0"
black = "^23.9.1"
viztracer = "^0.16.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
